--- a/templates/login.html
+++ b/templates/login.html
@@ -43,15 +43,17 @@
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
+        
     </style>
 </head>
 <body>
     <form action="/login" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Login" onclick="redirectToReserveParking()">
+        <label for="username">Usuario: </label>
+        <input type="text" id="username" name="username" value="usuario1"><br>
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" value="contraseña1"><br><br>
+        <input type="submit" value="Ingresar" onclick="redirectToReserveParking()">
     </form>
+
 </body>
 </html>
