--- a/templates/reserve_parking.html
+++ b/templates/reserve_parking.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Reservar Estacionamiento</title>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <style>
         /* Estilos del mapa */
         #map {
@@ -12,12 +16,56 @@
         }
     </style>
 </head>
+
 <body>
+    <nav class="navbar bg-primary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Mi Estacionamiento</span>
+        </div>
+    </nav>
+    <br><br>
+    <h1 class="text-center">Búsqueda de estacionamientos</h1>
+    <br><br>
     <div class="container">
         <!-- Aquí va el mapa -->
         <div id='map'></div>
     </div>
-
+    <br><br><br><br>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Reservar Estacionamiento</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-center" id="exampleModalLabel">¡Estacionamiento reservado con ÉXITO!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Nombre Estacionamiento: ConCon</p>
+                    <p>Nombre Arrendador: Ignacio Vegas</p>
+                    <p>Costo de arriendo por día: $10.000</p>
+                    <p>Horario de llegada: 15:00 - 19:00 HRS</p>
+                    <p>Horario de salida: 12:00 - 20:00 HRS</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary">Confirmar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br><br><br><br>
     <script>
         // Token de acceso a Mapbox
         mapboxgl.accessToken = 'pk.eyJ1IjoicGF0MWhubyIsImEiOiJjbG5naWgyOXIwYnF2Mm1vOXhueWFtbXM4In0.zfLtRF__vmCcRycCOuJbPw';
@@ -33,13 +81,101 @@
         // Añadir marcadores con popups
         var marker1 = new mapboxgl.Marker()
             .setLngLat([-74.5, 40])
-            .setPopup(new mapboxgl.Popup().setHTML("<h3>Marcador 1</h3><p>Información adicional sobre este marcador.</p>"))
+            .setPopup(new mapboxgl.Popup().setHTML("<h3>Estacionamiento Illapel</h3><p>Dueño: Matías Saldivar.</p>"))
             .addTo(map); // Coordenadas del marcador 1 con popup
 
         var marker2 = new mapboxgl.Marker()
             .setLngLat([-74.55, 39.9])
-            .setPopup(new mapboxgl.Popup().setHTML("<h3>Marcador 2</h3><p>Otra información aquí.</p>"))
+            .setPopup(new mapboxgl.Popup().setHTML("<h3>Estacionamiento ConCon</h3><p>Dueño: Ignacio Vegas.</p>"))
             .addTo(map); // Coordenadas del marcador 2 con popup
     </script>
+    <!-- Footer -->
+    <!-- Remove the container if you want to extend the Footer to full width. -->
+    <div class="">
+        <!-- Footer -->
+        <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+            <!-- Grid container -->
+            <div class="container p-4 pb-0">
+                <!-- Section: Links -->
+                <section class="">
+                    <!--Grid row-->
+                    <div class="row">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">
+                                MicroServicios Mi Estacionamiento
+                            </h6>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, ratione cum quis
+                                sunt nulla enim quae natus ad, veniam neque eum repellendus eos qui asperiores
+                                perspiciatis tempore magnam fugit commodi.
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <hr class="w-100 clearfix d-md-none" />
+
+                        <!-- Grid column -->
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+                            <p>
+                                <a class="text-white">MicroServicios</a>
+                            </p>
+                            <p>
+                                <a class="text-white">Login</a>
+                            </p>
+                            <p>
+                                <a class="text-white">Búsqueda estacionamientos</a>
+                            </p>
+                            <p>
+                                <a class="text-white">Naxopop :)</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <hr class="w-100 clearfix d-md-none" />
+
+                        <!-- Grid column -->
+                        <hr class="w-100 clearfix d-md-none" />
+
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                            <p><i class="fas fa-home mr-3"></i> sebas.moralesm@duocuc.cl</p>
+                            <p><i class="fas fa-envelope mr-3"></i> pat.gonzalezg@duocuc.cl</p>
+                            <p><i class="fas fa-phone mr-3"></i> ign.vegas@duocuc.cl</p>
+                            <p><i class="fas fa-print mr-3"></i> ni.castillo@duocuc.cl</p>
+                        </div>
+                        <!-- Grid column -->
+
+                    </div>
+                    <!--Grid row-->
+                </section>
+                <!-- Section: Links -->
+            </div>
+            <!-- Grid container -->
+
+            <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                Â© 2023 Copyright:
+                <a class="text-white"
+                    href="https://github.com/PatoGonzalezz/MicroServicios">https://github.com/PatoGonzalezz/MicroServicios</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+    </div>
+    <!-- End of .container -->
+    <!-- Footer -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
